tests/errors/range_non_integer.py
# expect_error: TypeError
print(range(1.5))